@@ -101,7 +101,6 @@ uint8_t ProcessConfigurationDescriptor(void)
 								   EndpointData->EndpointAddress, EndpointData->EndpointSize,
 								   PIPE_BANK_DOUBLE);			
 
-				Pipe_SetInfiniteINRequests();
 				Pipe_SetInterruptPeriod(EndpointData->PollingIntervalMS);
 				
 				/* Set the flag indicating that the events pipe has been found */
@@ -117,8 +116,6 @@ uint8_t ProcessConfigurationDescriptor(void)
 				Pipe_ConfigurePipe(SIMAGE_DATA_IN_PIPE, EP_TYPE_BULK, PIPE_TOKEN_IN,
 								   EndpointData->EndpointAddress, EndpointData->EndpointSize,
 								   PIPE_BANK_DOUBLE);
-
-				Pipe_SetInfiniteINRequests();
 
 				/* Set the flag indicating that the data IN pipe has been found */
 				FoundEndpoints |= (1 << SIMAGE_DATA_IN_PIPE);
